--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PartialRouteInfoDataManager.cs" />
     <Compile Include="CodeMatchesDataManager.cs" />
     <Compile Include="CarrierAccountDataManager.cs" />
     <Compile Include="SaleZoneDataManager.cs" />
