--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ISupplierZoneToRPOptionPolicyExecutionContext.cs" />
     <Compile Include="PartialRoute\AffectedRouteOptionRules.cs" />
     <Compile Include="PartialRoute\AffectedRouteRules.cs" />
+    <Compile Include="PartialRoute\PartialRouteInfo.cs" />
     <Compile Include="PartialRoute\PartialRouteProcessState.cs" />
     <Compile Include="RouteBuildInterceptor\RouteBuildInterceptorSettings.cs" />
     <Compile Include="RouteRuleCriteria\RouteRuleCriteriaConfig.cs" />
