--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data/TOne.WhS.Routing.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data/TOne.WhS.Routing.Data.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPartialRouteInfoDataManager.cs" />
     <Compile Include="ICodeMatchesDataManager.cs" />
     <Compile Include="ICodeSaleZoneDataManager.cs" />
     <Compile Include="ICodeZoneMatchDataManager.cs" />
