--- a/Vanrise/Code/Vanrise.ExcelConversion.Entities/Vanrise.ExcelConversion.Entities.csproj
+++ b/Vanrise/Code/Vanrise.ExcelConversion.Entities/Vanrise.ExcelConversion.Entities.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Excel\ExcelWorksheet.cs" />
     <Compile Include="Excel\MergedCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadConditionsFromFileInput.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
