Add key CarrierPortal.MultinetPortal
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44407

--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -26,6 +26,7 @@
     <add key="CarrierPortal.RingoPortal" value=""/>
     <add key="CarrierPortal.SupplierPricelist" value=""/>
     <add key="CarrierPortal.PartnerPortal" value=""/>
+    <add key="CarrierPortal.MultinetPortal" value=""/>
     <add key="BIV2" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure"/>
     <add key="XBooster" value="StandardXBoosterStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardXBooster_CDRComparisonOutputStructure"/>
     <add key="ClearVoice" value="StandardClearVoiceStructure#StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardClearVoiceStructureBI"/>
