--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -162,6 +162,7 @@
     <Compile Include="AccountPackageRecurChargeManager.cs" />
     <Compile Include="Extensions\AccountDIDMemoryAnalyticDataManager.cs" />
     <Compile Include="Extensions\AccountManager\AccountManagerAssignmentManager.cs" />
+    <Compile Include="Extensions\AccountManager\RetailAccountAssignmentRuntime.cs" />
     <Compile Include="Extensions\AccountManager\RetailAccountAssignmentDefinition.cs" />
     <Compile Include="Extensions\AccountManager\RetailAccountAccountManagerSubViewDefinition.cs" />
     <Compile Include="RecurChargeBalanceUpdateSummaryManager.cs" />
