fixing bugs in Account manager page and updating the add and update methods
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44413

--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -87,6 +87,8 @@
     <Compile Include="AccountDefinition\AccountBEDefinitionSettings.cs" />
     <Compile Include="AccountDefinition\AccountBEDefinitionViewSettings.cs" />
     <Compile Include="AccountDefinition\AccountExtraFieldDefinitionConfig.cs" />
+    <Compile Include="AccountManager\AccountManagerAssignmentDetail.cs" />
+    <Compile Include="AccountManager\AccountManagerAssignmentQuery.cs" />
     <Compile Include="AccountManager\AccountManagerAssignmentRuntimeEditor.cs" />
     <Compile Include="AccountManager\AccountManagerAssignmentRuntimeInput.cs" />
     <Compile Include="AccountPartDefinition\AccountPartDefinitionFilter.cs" />
