--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Entities/TOne.WhS.CodePreparation.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Entities/TOne.WhS.CodePreparation.Entities.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="AddedRate.cs" />
     <Compile Include="AddedZone.cs" />
+    <Compile Include="AllCountriesToProcess.cs" />
+    <Compile Include="AllZonesToProcess.cs" />
     <Compile Include="ChangedData\ChangedCustomerCountry.cs" />
     <Compile Include="ChangedData\ChangedCode.cs" />
     <Compile Include="ChangedData\ChangedZoneRoutingProducts.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="ExistingZoneInfo.cs" />
     <Compile Include="ExistingZone.cs" />
     <Compile Include="ICPParametersContext.cs" />
+    <Compile Include="ImportedData\AllImportedCodes.cs" />
     <Compile Include="ImportedData\ImportedCode.cs" />
     <Compile Include="IProcessCountriesContext.cs" />
     <Compile Include="IProcessCountryZonesRoutingProductsContext.cs" />
@@ -106,6 +109,7 @@
     <Compile Include="SaleCode\NewCode.cs" />
     <Compile Include="SaleCode\NewCodeInput.cs" />
     <Compile Include="SaleCode\NewCodeOutput.cs" />
+    <Compile Include="SaleZone\AllNewZones.cs" />
     <Compile Include="SaleZone\ClosedZonesInput.cs" />
     <Compile Include="SaleZone\CloseZonesOutput.cs" />
     <Compile Include="SaleZone\DeletedZone.cs" />
