update all import supplier pricelist rules
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44424

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
@@ -84,6 +84,7 @@
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\CodeEEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\RateIncreasedCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateCodesRates\MissingZonesCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateImportedZones\ImportedOtherRateIsGreaterThanMaximumRateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateImportedZones\ImportedRateIsGreaterThanMaximumRateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\ServiceBEDLessThanRetroactiveDateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\CodeBEDLessThanRetroactiveDateCondition.cs" />
