--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities/TOne.WhS.SupplierPriceList.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities/TOne.WhS.SupplierPriceList.Entities.csproj
@@ -89,8 +89,10 @@
     <Compile Include="SPL\ExistingRateGroupByZoneName.cs" />
     <Compile Include="SPL\ExistingRateGroup.cs" />
     <Compile Include="SPL\ExistingZoneService.cs" />
+    <Compile Include="SPL\ImportedData\AllImportedCodes.cs" />
     <Compile Include="SPL\ImportedData\AllImportedDataByZone.cs" />
     <Compile Include="SPL\CountryNotImportedCodes.cs" />
+    <Compile Include="SPL\ImportedData\AllImportedZones.cs" />
     <Compile Include="SPL\ImportedData\ImportedDataByZone.cs" />
     <Compile Include="SPL\ImportedData\ImportedZoneServiceGroup.cs" />
     <Compile Include="SPL\ImportedData\ImportedZoneService.cs" />
