--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
@@ -45,6 +45,10 @@
     <Reference Include="Vanrise.BusinessProcess">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Vanrise.Common\bin\Debug\Vanrise.Common.dll</HintPath>
