--- a/Vanrise/Code/Vanrise.Invoice.BP/Vanrise.Invoice.BP.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.BP/Vanrise.Invoice.BP.csproj
@@ -91,6 +91,12 @@
       <SubType>Designer</SubType>
     </XamlAppDef>
   </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="InvoiceActionProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
