--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.BP.Activities/TOne.WhS.SupplierPriceList.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.BP.Activities/TOne.WhS.SupplierPriceList.BP.Activities.csproj
@@ -135,6 +135,7 @@
     <Compile Include="StructureDataByZones.cs" />
     <Compile Include="StructureDataByCountries.cs" />
     <Compile Include="SyncImportedDataWithDB.cs" />
+    <Compile Include="UpdateImportedBEDs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.WhS.BusinessEntity.Business\TOne.WhS.BusinessEntity.Business.csproj">
