--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -105,6 +105,7 @@
     <Compile Include="BusinessRules\BusinessRuleUtilities.cs" />
     <Compile Include="BusinessRules\Conditions\ConflictingRateCurrenciesCondition.cs" />
     <Compile Include="BusinessRules\Conditions\CountryToSellNewRateIsClosed.cs" />
+    <Compile Include="BusinessRules\Conditions\CountryToSellRateCurrenciesConflict.cs" />
     <Compile Include="BusinessRules\Conditions\CountryToSellRateGreaterThanMaxRate.cs" />
     <Compile Include="BusinessRules\Conditions\CountryToSellRateLessThanOrEqualToZeroCondition.cs" />
     <Compile Include="BusinessRules\Conditions\Country\ChangedCountryEEDIsLessThanToday.cs" />
