adding class InvoiceBulkActionProcessInput
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44494

--- a/Vanrise/Code/Vanrise.Invoice.BP.Arguments/Vanrise.Invoice.BP.Arguments.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.BP.Arguments/Vanrise.Invoice.BP.Arguments.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvoiceBulkActionProcessInput.cs" />
     <Compile Include="InvoiceGenerationProcessOutput.cs" />
     <Compile Include="InvoiceGenerationProcessInput.cs" />
     <Compile Include="AutomaticInvoiceProcessInput.cs" />
