--- a/Vanrise/Code/Vanrise.Invoice.Data.SQL/Vanrise.Invoice.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Data.SQL/Vanrise.Invoice.Data.SQL.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingPeriodInfoDataManager.cs" />
+    <Compile Include="InvoiceBulkActionsDraftDataManager.cs" />
     <Compile Include="InvoiceDataManager.cs" />
     <Compile Include="InvoiceGenerationDraftDataManager.cs" />
     <Compile Include="InvoiceItemDataManager.cs" />
