--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\InvoiceBulkActionsDraftController.cs" />
     <Compile Include="Controllers\VRInvoiceController.cs" />
     <Compile Include="Controllers\InvoiceItemController.cs" />
     <Compile Include="Controllers\InvoiceSettingController.cs" />
@@ -253,6 +254,12 @@
     <Content Include="VR_Invoice\Directives\InvoiceSetting\Templates\InvoiceSettingGridTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\vr-invoice-invoicesetting-selector.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\vr-invoicesetting-grid.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceBulkAction\InvoiceBulkActionEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceBulkAction\Templates\InvoiceBulkActionEditor.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceBulkAction\Templates\InvoiceBulkActionsGridTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceBulkAction\vr-invoicetype-invoicebulkactions-selector.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceBulkAction\vr-invoicetype-invoicebulkactions.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceBulkAction\vr-invoicetype-invoicebulkactionsettings.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\AutomaticInvoiceAction\AutomaticInvoiceActionEditorController.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\AutomaticInvoiceAction\MainExtensions\SaveInvoiceToFileActionSetEditorController.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\AutomaticInvoiceAction\MainExtensions\EmailActionAttachmentSetEditorController.js" />
@@ -376,6 +383,10 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\ItemSetNameStorageRule\Templates\ItemSetNameStorageRulesManagement.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\ItemSetNameStorageRule\vr-invoicetype-itemsetnamestoragerulesettings.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\ItemSetNameStorageRule\vr-invoicetype-itemsetnamestoragerules-management.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\MenualBulkAction\MenualBulkActionEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\MenualBulkAction\Templates\MenualBulkActionEditor.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\MenualBulkAction\Templates\MenualBulkActionsManagement.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\MenualBulkAction\vr-invoicetype-menualbulkactions.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\RDLCReport\RDLCReportParameterValue\Templates\RDLCReportParameterManagement.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\RDLCReport\Templates\RDLCSubReportsManagement.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\RDLCReport\RDLCReportParameterValue\vr-invoicetype-gridactionsettings-openrdlcreport-parameters.js" />
@@ -450,6 +461,7 @@
     <Content Include="VR_Invoice\Services\APIServices\InvoiceTypeConfigsAPIService.js" />
     <Content Include="VR_Invoice\Services\APIServices\ItemGroupingSectionAPIService.js" />
     <Content Include="VR_Invoice\Services\APIServices\PartnerInvoiceSettingAPIService.js" />
+    <Content Include="VR_Invoice\Services\InvoiceBulkActionService.js" />
     <Content Include="VR_Invoice\Services\AutomaticInvoiceActionService.js" />
     <Content Include="VR_Invoice\Services\InvoiceAttachmentService.js" />
     <Content Include="VR_Invoice\Services\InvoiceActionService.js" />
@@ -529,6 +541,8 @@
     <Content Include="VR_Invoice\Views\Runtime\InvoiceEmailTemplateController.js" />
     <Content Include="VR_Invoice\Views\Runtime\InvoiceNoteActionEditor.html" />
     <Content Include="VR_Invoice\Views\Runtime\InvoiceNoteActionEditorController.js" />
+    <Content Include="VR_Invoice\Views\Runtime\MenualInvoiceBulkActionsRunTimeEditor.html" />
+    <Content Include="VR_Invoice\Views\Runtime\MenualInvoiceBulkActionsRunTimeEditorController.js" />
     <Content Include="VR_Invoice\Views\Runtime\PartnerInvoiceSettingEditor.html" />
     <Content Include="VR_Invoice\Views\Runtime\PartnerInvoiceSettingEditorController.js" />
   </ItemGroup>
