adding AssignAccountManagerAccountActionSettings class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44518

--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <Compile Include="AccountBalanceAlertRule\PercentageBalanceAlertThreshold.cs" />
     <Compile Include="AccountBalanceFieldSource\FinancialAccountFieldSourceSetting.cs" />
+    <Compile Include="AccountBEActionTypes\AssignAccountManagerAccountActionSettings.cs" />
     <Compile Include="AccountBEActionTypes\ExportRatesActionSettings.cs" />
     <Compile Include="AccountBEActionTypes\ChangeStatusActionController.cs" />
     <Compile Include="AccountBEActionTypes\ChangeStatusActionManager.cs" />
