Adding VRLocalizationLanguage Classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44525

--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="IVRComponentTypeDataManager.cs" />
     <Compile Include="IVREventHandlerDataManager.cs" />
     <Compile Include="IVRExclusiveSessionDataManager.cs" />
+    <Compile Include="IVRLocalizationLanguageDataManager.cs" />
     <Compile Include="IVRLoggableEntityDataManager.cs" />
     <Compile Include="IVRObjectTrackingDataManager.cs" />
     <Compile Include="IVRRuleDataManager.cs" />
