--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -60,6 +60,7 @@
     <Compile Include="VRComponentTypeDataManager.cs" />
     <Compile Include="VREventHandlerDataManager.cs" />
     <Compile Include="VRExclusiveSessionDataManager.cs" />
+    <Compile Include="VRLocalizationLanguageDataManager.cs" />
     <Compile Include="VRLoggableEntityDataManager.cs" />
     <Compile Include="VRObjectTrackingDataManager.cs" />
     <Compile Include="VRRuleDataManager.cs" />
