--- a/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
+++ b/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
@@ -284,6 +284,7 @@
     <Content Include="Common\Directives\VRApplicationVisibility\vr-common-applicationvisibility-settings.js" />
     <Content Include="Common\Directives\VRApplicationVisibility\vr-common-modulevisibility-selective.js" />
     <Content Include="Common\Directives\VRApplicationVisibility\VRModuleVisibilityEditorController.js" />
+    <Content Include="Common\Directives\VRBoolean\vr-common-boolean-selector.js" />
     <Content Include="Common\Directives\VRComponentType\Templates\OverriddenConfigurationComponentType.html" />
     <Content Include="Common\Directives\VRComponentType\Templates\VRComponentTypeGridTemplate.html" />
     <Content Include="Common\Directives\VRComponentType\vr-common-componenttype-grid.js" />
