fix Vanrise.common reference path
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44568

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Data.SQL/TOne.WhS.Routing.Data.SQL.csproj
@@ -51,7 +51,7 @@
     </Reference>
     <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Vanrise\Code\Vanrise.Common\bin\Debug\Vanrise.Common.dll</HintPath>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Data">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
