implementing clean temporary tables
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44579

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
@@ -101,6 +101,7 @@
     <Compile Include="ApplyPreviewZonesRPsToDB.cs" />
     <Compile Include="ApplyPreviewZonesToDB.cs" />
     <Compile Include="BackupData.cs" />
+    <Compile Include="CleanTemporaryTables.cs" />
     <Compile Include="GenerateZonesRPsPreview.cs" />
     <Compile Include="LogCustomersToNotify.cs" />
     <Compile Include="NotificationContext.cs" />
