--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ApplySaleZoneRoutingProductPreviewsToDB.cs" />
     <Compile Include="ApplySaleZoneServicePreviewsToDB.cs" />
     <Compile Include="BackupData.cs" />
+    <Compile Include="CleanTemporaryTables.cs" />
     <Compile Include="DeleteRatePlanDraft.cs" />
     <Compile Include="GetExistingCustomerCountries.cs" />
     <Compile Include="FillArgumentFromContext.cs" />
