Add reference from output project
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44588

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -114,7 +114,7 @@
     </Reference>
     <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Vanrise\Code\Vanrise.Common.Business\bin\Debug\Vanrise.Common.Business.dll</HintPath>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -699,7 +699,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>54031</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
