Implementing VR Localization Language
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44603

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -162,6 +162,8 @@
     <Compile Include="VRExclusiveSession\VRExclusiveSessionType.cs" />
     <Compile Include="VRExclusiveSession\VRExclusiveSessionTypeSettings.cs" />
     <Compile Include="VRLocalization\VRLocalizationLanguage.cs" />
+    <Compile Include="VRLocalization\VRLocalizationLanguageDetail.cs" />
+    <Compile Include="VRLocalization\VRLocalizationLanguageQuery.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResource.cs" />
     <Compile Include="VRLocalization\VRLocalizationTextResourceTranslation.cs" />
     <Compile Include="VRMail\VRMail.cs" />
