--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Activities/TOne.WhS.Routing.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Activities/TOne.WhS.Routing.BP.Activities.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ApplyProductRoutesToDB.cs" />
     <Compile Include="ApplySupplierZoneDetailsToDB.cs" />
     <Compile Include="BuildCodeMatches.cs" />
+    <Compile Include="PartialRoute\CheckModifiedCustomerRoutes.cs" />
     <Compile Include="PartialRoute\BuildPartialCustomerRoutes.cs" />
     <Compile Include="BuildCustomerRoutes.cs" />
     <Compile Include="CodePrefixRequest.cs" />
