Refactor ClosedExistingZonesByCountry and create new activity to add each country ClosedExistingZones to the dictionary ClosedExistingZonesByCountry
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44624

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCountryClosedExistingZonesToAllClosedExistingZones.cs" />
     <Compile Include="ApplyChangedCountriesToDB.cs" />
     <Compile Include="ApplyChangedZonesRoutingProductsToDB.cs" />
     <Compile Include="ApplyChangedZonesServicesToDB.cs" />
