--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AccountManager\AccountManagerAssignmentQuery.cs" />
     <Compile Include="AccountManager\AccountManagerAssignmentRuntimeEditor.cs" />
     <Compile Include="AccountManager\AccountManagerAssignmentRuntimeInput.cs" />
+    <Compile Include="AccountManager\AccountManagerDefInfo.cs" />
     <Compile Include="AccountPartDefinition\AccountPartDefinitionFilter.cs" />
     <Compile Include="AccountProvisioner\AccountProvisioner.cs" />
     <Compile Include="AccountProvisioner\AccountProvisionerConfig.cs" />
